--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 </head>
+  <header>
+    <nav>
+      <ul>
+  <li><a href="./indext.html">home</a></li>
+  <li><a href="./aboutme.html">About Me</a></li>
+  <li><a href=". /myresume.pdf" target="_blank">My resume</a></li>li>
+      </ul>
+    </nav>
+  </header>
   <body>
   </body>
  <foot>
