--- a/Aboutme.html
+++ b/Aboutme.html
@@ -6,7 +6,7 @@
   <header>
     <nav>
       <ul>
-        <a href="./indexthtml"><li></a>
+        <a href="./index.html"><li></a>
         <a href="./aboutme.html"><li>About Me</li></a>
       </ul>
     </nav>
