--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <header>
     <nav>
       <ul>
-  <li><a href="./indext.html">home</a></li>
+  <li><a href="./index.html">home</a></li>
   <li><a href="./aboutme.html">About Me</a></li>
   <li><a href=". /myresume.pdf" target="_blank">My resume</a></li>li>
       </ul>
